--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -6,8 +6,8 @@
 \titulo{Equalização de Frequência em Cifradores de      
 Fluxo: Uma proposta de algoritmo}
 \data{2014}
-\palavraChaveUm{Palavra-chave01}
-\palavraChaveDois{Palavra-chave02}
+\palavraChaveUm{balanceamento}
+\palavraChaveDois{cifra de fluxo}
 
 % Dados da orientacao
 \orientador{Prof. Dr. Luiz Augusto Fontes Laranjeira}
