--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -1,7 +1,7 @@
 \chapter{Introdução}
 \label{introduction}
 
-Desde tempos anciões, segredos sempre existiram e métodos para deixa-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosos estavam tentando quebra-los. ~\cite{alexander-maximov}
+Desde tempos anciões, segredos sempre existiram e métodos para deixa-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosos estavam tentando quebra-los. ~\cite{alexander-maximov} %ok
 
 Na constante luta entre manter e quebrar segredos, métodos foram desenvolvidos para se esconder informações e falhas nesses métodos foram exploradas para se obter as informações.
 
@@ -27,10 +27,10 @@ Esse trabalho visa apresentar um algoritmo para dificultar a análise de frequê
 \section{Organização do Trabalho}
 \label{paper-organization}
 
-O trabalho tem a seguinte organização: no capítulo 2\ref{cryptography} é apresentado os principais tipos de algoritmos criptográficos incluindo a descrição de exemplo dos mesmos e também é descrito métodos de criptoanálise.
+O trabalho tem a seguinte organização: no capítulo \ref{cryptograhy} é apresentado os principais tipos de algoritmos criptográficos incluindo a descrição de exemplo dos mesmos e também é descrito métodos de criptoanálise.
 
-No capitulo 3\ref{prng} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicado a importância desses geradores para a criptografia. 
+No capitulo \ref{pseudo-random-number-generator} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicado a importância desses geradores para a criptografia. 
 
-No capitulo 4\ref{proposed-algorithm} é explicado a proposta do algoritmo com suas soluções, explicação do seu funcionamento e as principais vantagens em relação a outros algoritmos.
+No capitulo \ref{algorithm-proposition} é explicado a proposta do algoritmo com suas soluções, explicação do seu funcionamento e as principais vantagens em relação a outros algoritmos.
 
-No capitulo 5\ref{conclusion} a conclusão desse trabalho é apresentada e a descrição de trabalhos futuros e suas importâncias são descritas. 
+No capitulo \ref{conclusion} a conclusão desse trabalho é apresentada e a descrição de trabalhos futuros e suas importâncias são descritas. 
