--- a/capitulos/3-prng.tex
+++ b/capitulos/3-prng.tex
@@ -26,13 +26,13 @@ Com isso a utilização de geradores de números pseudo aleatórios se faz neces
 
 Um gerador de números pseudo-aleatórios tem como entrada uma semente \footnote{Termo para especificar um número para geração de uma sequência.} A semente normalmente é gerada de um algoritmo \textit{TRNG}. Pelo fato de serem utilizadas como entrada em algoritmos determinísticos as sementes devem ser guardadas de forma segura.
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[scale=1]
-	{figuras/prng.eps}
-	\caption[Esquema de um \textit{PRNG}]{Esquema de um \textit{PRNG}\protect\footnotemark}
-\end{figure}
-\footnotetext{\url{www.pit-claudel.fr/clement/blog/how-random-is-pseudo-random-testing-pseudo-random-number-generators-and-measuring-randomness/}}
+%\begin{figure}[h]
+%	\centering
+%	\includegraphics[scale=1]
+%	{figuras/prng.eps}
+%	\caption[Esquema de um \textit{PRNG}]{Esquema de um \textit{PRNG}\protect\footnotemark}
+%\end{figure}
+%\footnote{Fonte: \url{www.pit-claudel.fr/clement/blog/how-random-is-pseudo-random-testing-pseudo-random-number -generators-and-measuring-randomness/}}
 
 
 \section{Geradores}
@@ -41,7 +41,7 @@ Um gerador de números pseudo-aleatórios tem como entrada uma semente \footnote
 Uma técnica muito usada para geração de números pseudo-aleatórios é um algoritmo que primeiramente foi proposto por Lehmer, que é conhecido como método \textit{Linear Congruential}. \cite{william-stallings} O algoritmo gera uma sequência dependendo das entradas e a função utilizada para essa geração é:
 \begin{equation}
 	\label{Função para geração de números aleatórios.}
-	\mathcal{X}_n = (a * X_{n - 1} + c) mod n
+	\mathcal{X}_n = (a \times X_{n - 1} + c)\: \bmod \: n
 \end{equation}
 
 Para cada número na sequência, essa formula é aplicada. A eficiência dessa sequência está diretamente relacionada a escolha das variáveis. A variável \textbf{m} é o módulo da equação e condição de escolha dessa variável é ser maior que 0. Para a variável \textbf{a} é o multiplicador da função e sua condição é ser maior que 0 e menor que \textbf{m}. A variável c é o incremento, sua condição é é estar entre 0 e \textbf{m}. O \textbf{$X_0$} é a semente para a sequência, será o primeiro elemento da sequência e sua condição é estar entre 0 e \textbf{m}.
@@ -65,7 +65,7 @@ Portanto o primeiro valor da sequência é o 1, por ser a semente. O segundo val
 
 \begin{equation}
 	\label{Cálculo do segundo valor}
-	\mathcal{X}_n = ( 5 * 1 + 0) mod 16
+	\mathcal{X}_n = ( 5 \: \times \: 1 \: + \: 0) \: \bmod \: 16
 \end{equation}
 
 \begin{equation}
@@ -77,7 +77,7 @@ Para o terceiro valor, o cálculo é feito utilizando o resultado do anterior:
 
 \begin{equation}
 	\label{Cálculo do terceiro valor}
-	\mathcal{X}_n = ( 5 * 5 + 0) mod 16
+	\mathcal{X}_n = ( 5 \: \times \: 5\: +\: 0)\: \bmod \: 16
 \end{equation}
 
 \begin{equation}
@@ -89,7 +89,7 @@ Finalmente para o quarto valor, também se utiliza o valor anterior em seu cálc
 
 \begin{equation}
 	\label{Cálculo do quarto valor}
-	\mathcal{X}_n = ( 5 * 9 + 0) mod 16
+	\mathcal{X}_n = ( 5 \: \times \: 9 \: + \: 0) \: \bmod \: 16
 \end{equation}
 
 \begin{equation}
@@ -101,7 +101,7 @@ A partir do quinto valor, a sequência se repete:
 
 \begin{equation}
 	\label{Cálculo do quinto valor}
-	\mathcal{X}_n = ( 5 * 13 + 0) mod 16
+	\mathcal{X}_n = ( 5 \: \times \: 13 \: + \: 0) \: \bmod \: 16
 \end{equation}
 
 \begin{equation}
@@ -145,17 +145,17 @@ Com isso o gerador produzirá uma sequência com as seguintes condições:
 
 \begin{equation}
 	\label{Equação para produzir a sequência}
-	\mathcal{X}_0 = s^2 mod n
+	\mathcal{X}_0 = s^2\: \bmod \: n
 \end{equation}
 
 \begin{equation}
 	\label{Equação para produzir a sequência}
-	\mathcal{X}_n = (X_{n-1})^2 mod n
+	\mathcal{X}_n = (X_{n-1})^2 \: \bmod \: n
 \end{equation}
 
 \begin{equation}
 	\label{Equação para produzir a sequência}
-	\mathcal{B}_n = X_n mod 2
+	\mathcal{B}_n = X_n \: \bmod \: 2
 \end{equation}
 Ou seja, os bits menos significantes são retirados a cada número produzido.
 
@@ -165,7 +165,7 @@ Multiple recursive generator se tornou recentemente o gerador de números pseudo
 
 \begin{equation}
 	\label{Função para produção dos números}
-	\mathcal{X}_n = (a_1*X_(n-1) + ... + a_k * X_{n-k} * C) mod n
+	\mathcal{X}_n = (a_1\: \times \: X_{n-1} \: + \: ...  \: + \: a_k \: \times \: X_{n-k} \: \times \:  C) \: \bmod \: n
 \end{equation}
 
 Utilizando sementes (X$_0$, X$_1$, ... X$_{k-1}$. Para cada valor da sequência é utilizado o valor k do número anterior. 
