Inserting the symbols and abbreviations

--- a/editaveis/abreviaturas.tex
+++ b/editaveis/abreviaturas.tex
@@ -1,6 +1,21 @@
 \begin{siglas}
-  \item[Fig.] Area of the $i^{th}$ component
-  \item[456] Isto é um número
-  \item[123] Isto é outro número
-  \item[lauro cesar] este é o meu nome
+  \item[DES] Data Encryption Standard.
+  \item[IBM] International Business Machines.
+  \item[NIST] National Institute of Standards and Technology
+  \item[AES] Advanced Encryption Standard
+  \item[ECB] Electronic codebook
+  \item[CBC] Cipher-block chaining
+  \item[CFB] Cipher feedback
+  \item[OFB] Output Feedback
+  \item[CTR] Counter
+  \item[SSL] Secure Sockets Layer
+  \item[GSM] Global System for Mobile
+  \item[LFSR] Linear feedback shift register
+  \item[TLS] Transport Layer Security
+  \item[WEP] Wired Equivalent Privacy
+  \item[RSA] Algoritmo criptográfico de chave assimétrica
+  \item[MIT] Massachusetts Institute of Technology
+  \item[TRNG] True random number generator
+  \item[PRNG] Pseudorandom number generator
+  \item[RC4] Rivest Cipher 4
 \end{siglas}
