--- a/editaveis/simbolos.tex
+++ b/editaveis/simbolos.tex
@@ -1,6 +1,4 @@
 \begin{simbolos}
-  \item[$ \Gamma $] Letra grega Gama
-  \item[$ \Lambda $] Lambda
-  \item[$ \zeta $] Letra grega minúscula zeta
-  \item[$ \in $] Pertence
+  \item[$ \oplus $] Símbolo lógico ou-exclusivo
+  \item[$ \phi $] Função Totiente de Euler
 \end{simbolos}
