Updating the bibliography

--- a/capitulos/2-criptografia.tex
+++ b/capitulos/2-criptografia.tex
@@ -314,6 +314,6 @@ Na tabela, se armazena os dados do estado e os \textbf{s} produzidos. Após isso
 \subsection{Differential Cryptanalysis}
 \label{differential-cryptanalysis}
 
-Esse método foi sugerido como uma forma geral de analisar primitivas criptográficas. ~\cite{eli-orr} 
+Esse método foi sugerido como uma forma geral de analisar primitivas criptográficas. ~\cite{eli-orr}%ok
 
 O método foca em produzir diferenças na chave durante o processament odo algoritmo e assim obter uma saída com erros. A partir desses erros, informações podem ser deduzidas analisando o texto sem erros e o texto cifrado com erros. 
