--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,9 @@
+@Book{robert-lewand,
+author = { Robert Edward Lewand},
+title = {Cryptological Mathematics},
+publisher = {The Matematical Association of America},
+year = {2000}
+}
 @book{vauldenay,
 	Author = {Serge Vaudenay},
 	Title = {A Classical Introduction To Cryptography, Applications for Communications Security
@@ -19,68 +25,22 @@
 	address = {University Technology Malaysia},
 }
 
-@inproceedings{sparrow1980,
-	Author = {E. M. Sparrow},
-	Title = {Forced Convection Heat Transfer in a Duct Having Spanwise-Periodic
-	Rectangular Protuberances},
-	Year = {1980},
-	Pages = {149-167},
-	Volume = {3},
-	Booktitle = {Numerical Heat Transfer},
-}
-
 @article{donald-davies,
 	Author = {Donald Davies},
 	Title = {A Brief History of Cryptography},
 	Year = {1997},
 }
 
-@article{arruda2007,
-	Author = {M. B. B. Arruda},
-	Title = {Como fazer referências: bibliográficas, eletrônicas e demais
-	formas de documentos},
-	Year = {2007},
-	Url = {http://bu.ufsc.br/framerefer.html}
+@PhdThesis{alexander-maximov,
+author = {Alexander Maximov},
+title = {Some Words on Cryptanalysis of Stream Ciphers},
+school = {Lund University},
+year = {2006}
 }
 
-@article{coimbra1978,
-	Author = {A. L. Coimbra},
-	Title = {Lessons of Continuum Mechanics},
-	Year = {1978},
-	Address = {São Paulo, Brazil},
-	Pages = {428},
-	Editor = {Edgard Blücher},
+@Article{eli-orr,
+author = {Eli Biham and Orr Dunkelman},
+title = {Differential Cryptanalysis in Stream Ciphers},
 }
 
-@inproceedings{bordalo1989,
-	Author = {S. N. Bordalo and J. H. Ferziger and S. J. Kline},
-	Title = {The Development of Zonal Models for Turbulence},
-	Year = {1989},
-	Pages = {41-44},
-	Booktitle = {Proceedings of the 10th Brazilian Congress of Mechanical
-	Engineering}, 
-	Volume = {1},	
-}
-
-@manual{NBR14724:2011,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 20:34:08 +0000},
-	Date-Modified = {2012-12-15 20:35:25 +0000},
-	Month = mar,
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 15,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao},
-	Title = {{NBR} 14724},
-	Year = 2011
-}
-
-@manual{NBR6034:2000,
-	Address = {Rio de Janeiro},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Referências},
-	Title = {{NBR} 14724},
-	Year = 2000
-}
 
