Updating the references

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -43,4 +43,23 @@ author = {Eli Biham and Orr Dunkelman},
 title = {Differential Cryptanalysis in Stream Ciphers},
 }
 
+@Article{cristophe-diethelm,
+author = {Cristophe Dutang and Diethelm Wuertz},
+title = {A note on random number generation},
+year = {2009},
+}
+
+@Book{william-stallings,
+author = {William Stallings},
+title = {Cryptography and Network Security, Principles and Practice},
+publisher = {Prentice Hall},
+year = {2011},
+}
+
+@Article{josefin-martin,
+author = {Josefin Agerblad and Martin Andersen
+},
+title = {Provably Secure Pseudo-Random Generators, A Literary Study},
+school = {The Royal Institute of Technology}
+}
 
