--- a/editaveis/abstract.tex
+++ b/editaveis/abstract.tex
@@ -4,6 +4,6 @@
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Key-words}: crytography. stream cipher. balancing. frequency
+   \textbf{Key-words}: crytography. stream cipher. balancing.
  \end{otherlanguage*}
 \end{resumo}
