--- a/capitulos/5-algoritmo.tex
+++ b/capitulos/5-algoritmo.tex
@@ -1,7 +1,7 @@
 \chapter{Proposta de Algoritmo}
 \label{algorithm-proposition}
 
-Nesta seção será apresentado o algoritmo que este trabalho visa propor e detalhes de seu funcionamento e vantagens.
+Neste capítulo será apresentado o algoritmo que este trabalho visa propor e detalhes de seu funcionamento e vantagens.
 
 \section{Motivação}
 \label{motivation}
